<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="hs__app_review_button">REVIEW</string>
    <string name="hs__attach_screenshot_btn">Attach Screenshot</string>
    <string name="hs__attach_screenshot_button">ATTACH</string>
    <string name="hs__ca_msg">"We're happy to help you!"</string>
    <string name="hs__change_btn">Change</string>
    <string name="hs__chat_btn">@string/hs__contact_us_btn</string>
    <string name="hs__chat_hint">Type your message</string>
    <string name="hs__chat_out_of_business_hours">"We're not around, but we'll get back to you during business hours"</string>
    <string name="hs__confirmation_footer_msg">Thanks for messaging us!</string>
    <string name="hs__confirmation_msg">Was this helpful?</string>
    <string name="hs__contact_us_btn">CONTACT US</string>
    <string name="hs__conversation_detail_error">Please describe your issue with more words.</string>
    <string name="hs__conversation_end_msg">This conversation has ended.</string>
    <string name="hs__conversation_header">Conversation</string>
    <string name="hs__conversation_started_message">Your message has been received. We will get back to you as soon as we can!</string>
    <string name="hs__copy">Copy</string>
    <string name="hs__could_not_open_attachment_msg">No apps can perform this action.</string>
    <string name="hs__could_not_reach_support_msg">Unable to reach support</string>
    <string name="hs__cr_msg">What else can we help you with?</string>
    <string name="hs__csat_additonal_feedback_message">Any other feedback (optional)</string>
    <string name="hs__csat_dislike_message">Hated It!</string>
    <string name="hs__csat_like_message">Loved It!</string>
    <string name="hs__csat_message">How happy are you with the agent that helped you?</string>
    <string name="hs__csat_option_message">or</string>
    <string name="hs__csat_ratingbar">Please rate our service.</string>
    <string name="hs__csat_submit_toast">Thanks for rating us.</string>
    <string name="hs__data_not_found_msg">Data not found</string>
    <string name="hs__default_notification_content_title">Support</string>
    <string name="hs__description_invalid_length_error">Please describe further so that we can help better</string>
    <string name="hs__dm_video_loading">Loading Video…</string>
    <string name="hs__done_btn">Done</string>
    <string name="hs__email_hint">Email (optional)</string>
    <string name="hs__email_required_hint">Email</string>
    <string name="hs__empty_section">Sorry! No questions available in this section.</string>
    <string name="hs__faq_fetching_fail_message">Unable to load FAQs at this moment. Please retry in a while…</string>
    <string name="hs__faq_header">CHOOSE A CATEGORY</string>
    <string name="hs__faqs_search_footer">No FAQs found.</string>
    <string name="hs__feedback_button">Send Feedback</string>
    <string name="hs__fetching_faqs_message">Getting your answers…</string>
    <string name="hs__file_not_found_msg">File not found</string>
    <string name="hs__file_type_audio">Audio</string>
    <string name="hs__file_type_csv">CSV</string>
    <string name="hs__file_type_ms_office">Office doc</string>
    <string name="hs__file_type_pdf">PDF</string>
    <string name="hs__file_type_rtf">RTF</string>
    <string name="hs__file_type_text">TXT</string>
    <string name="hs__file_type_unknown">File</string>
    <string name="hs__file_type_video">Video</string>
    <string name="hs__help_header">Help</string>
    <string name="hs__image_attachment">Image attachment</string>
    <string name="hs__image_not_available">Image not available</string>
    <string name="hs__invalid_description_error">More info needed!</string>
    <string name="hs__invalid_email_error">Please enter a valid email</string>
    <string name="hs__issue_archival_message">Sorry! This conversation was closed due to inactivity. Please start a new conversation with our agents.</string>
    <string name="hs__mark_helpful_toast">Question has been marked as Helpful</string>
    <string name="hs__mark_no">NO</string>
    <string name="hs__mark_unhelpful_toast">Question has been marked as Not Helpful</string>
    <string name="hs__mark_yes">YES</string>
    <string name="hs__mark_yes_no_question">Was this helpful?</string>
    <string name="hs__message_not_sent">Message not sent.</string>
    <string name="hs__network_error_msg">Oops! Something went wrong</string>
    <string name="hs__network_unavailable_msg">Network not available.</string>
    <string name="hs__new_conversation_btn">ASK ANOTHER QUESTION</string>
    <string name="hs__new_conversation_header">New Message</string>
    <string name="hs__new_conversation_hint">- Always connect your games to Google Play or Game Center!</string>
    <string name="hs__no_search_results_message">"Whoops! We couldn't find anything for query"</string>
    <string name="hs__notification_content_text">RE:</string>
    <string name="hs__permission_denied_message">Storage permission is required to access screenshots and download attachments</string>
    <string name="hs__permission_denied_snackbar_action">Settings</string>
    <string name="hs__permission_not_granted">Application does not have permission to access your photos</string>
    <string name="hs__permission_rationale_snackbar_action_label">OK</string>
    <string name="hs__question_header" />
    <string name="hs__question_helpful_message">You found this helpful.</string>
    <string name="hs__question_unhelpful_message">"You didn't find this helpful."</string>
    <string name="hs__rate_button">Rate</string>
    <string name="hs__remove_screenshot_btn">Remove Screenshot</string>
    <string name="hs__retry_faq_fetching_button">RETRY</string>
    <string name="hs__review_accepted_message">You accepted review request.</string>
    <string name="hs__review_close_button">Close</string>
    <string name="hs__review_message">If you love our app, please take a moment to rate it</string>
    <string name="hs__review_request_message">Would you like to review the App on Play Store?</string>
    <string name="hs__review_title">Rate Our App</string>
    <string name="hs__screenshot_add">Add</string>
    <string name="hs__screenshot_cloud_attach_error">Error attaching screenshot. Please choose an image available locally on the device.</string>
    <string name="hs__screenshot_limit_error">Screenshot size should not exceed %.2f MB</string>
    <string name="hs__screenshot_remove">Remove</string>
    <string name="hs__screenshot_sent_msg">Screenshot sent</string>
    <string name="hs__screenshot_upload_error_msg">Error uploading screenshot</string>
    <string name="hs__search_footer">"Can't find what you were looking for? Try different search terms, or…"</string>
    <string name="hs__search_hint">Search here</string>
    <string name="hs__search_result_message">FAQs that may already answer your question:</string>
    <string name="hs__search_result_title">Suggestions</string>
    <string name="hs__search_title">Search</string>
    <string name="hs__select_a_question_message">Please select a question from left</string>
    <string name="hs__send_anyway">SEND ANYWAY</string>
    <string name="hs__send_msg_btn">Send</string>
    <string name="hs__sending_fail_msg">Message not sent. Touch to retry.</string>
    <string name="hs__sending_msg">Sending…</string>
    <string name="hs__solved_btn">Yes, solved!</string>
    <string name="hs__starting_download">Starting download…</string>
    <string name="hs__submit_conversation_btn">Submit</string>
    <string name="hs__unsolved_btn">No, unsolved</string>
    <string name="hs__username_blank_error">Please enter a valid name</string>
    <string name="hs__username_hint">Your Name</string>
    <string name="hs__screen_type">phone</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
</resources>