<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="?android:windowBackground" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListView android:id="@id/hs__messagesList" android:paddingTop="@dimen/activity_vertical_margin_small" android:paddingBottom="@dimen/activity_vertical_margin_medium" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="0.0dip" android:scrollingCache="false" android:transcriptMode="alwaysScroll" android:layout_weight="1.0" android:isScrollContainer="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/hs__confirmation" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="?hs__separatorColor" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <ProgressBar android:id="@android:id/progress" android:visibility="gone" style="@style/Helpshift.Style.QuestionLoadProgress" />
        <com.helpshift.views.HSTextView android:textSize="@dimen/hs__textSizeMedium" android:textColor="?android:textColorPrimary" android:id="@android:id/text1" android:padding="@dimen/activity_horizontal_margin_medium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hs__confirmation_msg" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.helpshift.views.HSButton android:id="@android:id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hs__mark_no" style="@style/Helpshift.Style.BorderlessButton" />
            <com.helpshift.views.HSButton android:id="@android:id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hs__mark_yes" style="@style/Helpshift.Style.BorderlessButton" />
        </LinearLayout>
    </LinearLayout>
    <View android:background="?hs__separatorColor" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/relativeLayout1" android:background="?hs__composeBackgroundColor" android:layout_width="fill_parent" android:layout_height="56.0dip">
        <com.helpshift.views.HSEditText android:gravity="center_vertical" android:id="@id/hs__messageText" android:background="@android:color/transparent" android:paddingLeft="@dimen/activity_horizontal_margin_medium" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/hs__chat_hint" android:maxLines="@integer/hs__chat_max_lines" android:layout_weight="1.0" android:inputType="textMultiLine" android:imeOptions="actionSend" />
        <ImageButton android:layout_gravity="center" android:id="@id/hs__sendMessageBtn" android:background="?selectableItemBackground" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@drawable/hs__send" android:contentDescription="@string/hs__send_msg_btn" />
    </LinearLayout>
</LinearLayout>