<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:background="?android:windowBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin_medium" android:paddingTop="@dimen/activity_horizontal_margin_large" android:paddingRight="@dimen/activity_horizontal_margin_medium" android:paddingBottom="@dimen/activity_horizontal_margin_large" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.helpshift.views.HSEditText android:textSize="@dimen/hs__textSizeLarge" android:textColor="?android:textColorPrimary" android:textColorHint="?android:textColorHint" android:id="@id/hs__conversationDetail" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hs__new_conversation_hint" android:maxLines="@integer/hs__chat_max_lines" android:minLines="@integer/hs__conversation_detail_lines" android:inputType="textMultiLine" />
            <com.helpshift.views.HSEditText android:textSize="@dimen/hs__textSizeLarge" android:textColor="?android:textColorPrimary" android:textColorHint="?android:textColorHint" android:id="@id/hs__username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_horizontal_margin_small" android:hint="@string/hs__username_hint" android:singleLine="true" />
            <com.helpshift.views.HSEditText android:textSize="@dimen/hs__textSizeLarge" android:textColor="?android:textColorPrimary" android:textColorHint="?android:textColorHint" android:id="@id/hs__email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_horizontal_margin_small" android:hint="@string/hs__email_hint" android:inputType="textEmailAddress" />
            <android.support.v7.widget.CardView android:id="@id/screenshot_view_container" android:background="?hs__attachmentBackgroundColor" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_horizontal_margin_large" app:elevation="2.0dip" app:cardCornerRadius="4.0dip">
                <ImageView android:id="@id/hs__screenshot" android:background="@android:color/white" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="160.0dip" android:scaleType="centerCrop" android:layout_alignParentTop="true" />
                <LinearLayout android:gravity="center" android:layout_gravity="end|bottom|center" android:orientation="horizontal" android:background="?hs__attachmentBackgroundColor" android:layout_width="fill_parent" android:layout_height="56.0dip">
                    <ImageView android:id="@id/attachment_icon" android:visibility="visible" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginLeft="@dimen/activity_horizontal_margin_medium" android:src="@drawable/hs__attachment_icon" android:scaleType="fitCenter" android:tint="?colorAccent" />
                    <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin_medium" android:layout_weight="1.0">
                        <com.helpshift.views.HSTextView android:textSize="@dimen/hs__textSizeMedium" android:textColor="?android:textColorPrimary" android:ellipsize="marquee" android:id="@id/attachment_file_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="true" />
                        <com.helpshift.views.HSTextView android:textSize="@dimen/hs__textSizeSmall" android:textColor="?android:textColorSecondary" android:id="@id/attachment_file_size" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                    <ImageButton android:id="@android:id/button2" android:background="@android:color/transparent" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginLeft="@dimen/activity_horizontal_margin_medium" android:layout_marginRight="@dimen/activity_horizontal_margin_medium" android:src="@drawable/hs__screenshot_clear" android:tint="?android:textColorPrimary" android:text="@string/hs__remove_screenshot_btn" android:contentDescription="@string/hs__remove_screenshot_btn" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <ProgressBar android:id="@id/progress_bar" android:visibility="gone" style="@style/Helpshift.Style.QuestionLoadProgress" />
    </FrameLayout>
</ScrollView>